update EDA file

--- a/workout/EDA_final.ipynb
+++ b/workout/EDA_final.ipynb
@@ -47,163 +47,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "start_longitude\n",
-       "126.567766    23291\n",
-       "126.736249    20775\n",
-       "126.456384    18137\n",
-       "126.556173    18084\n",
-       "126.505998    18076\n",
-       "              ...  \n",
-       "126.682267      881\n",
-       "126.677154      788\n",
-       "126.524410      744\n",
-       "126.524429      744\n",
-       "126.525745      587\n",
-       "Name: count, Length: 586, dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "train_data['start_longitude'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "start_latitude\n",
-       "33.248633    23291\n",
-       "33.435941    20775\n",
-       "33.465863    18137\n",
-       "33.507349    18084\n",
-       "33.500330    18076\n",
-       "             ...  \n",
-       "33.491729      881\n",
-       "33.437249      788\n",
-       "33.256671      744\n",
-       "33.261270      744\n",
-       "33.257401      587\n",
-       "Name: count, Length: 586, dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data['start_latitude'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "end_longitude\n",
-       "126.567766    23126\n",
-       "126.736249    20791\n",
-       "126.456384    18168\n",
-       "126.505998    18126\n",
-       "126.556173    18083\n",
-       "              ...  \n",
-       "126.680766      881\n",
-       "126.678235      788\n",
-       "126.524331      744\n",
-       "126.524410      744\n",
-       "126.524429      587\n",
-       "Name: count, Length: 586, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data['end_longitude'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "end_latitude\n",
-       "33.248633    23126\n",
-       "33.435941    20791\n",
-       "33.465863    18168\n",
-       "33.500330    18126\n",
-       "33.507349    18083\n",
-       "             ...  \n",
-       "33.491567      881\n",
-       "33.468664      788\n",
-       "33.254153      744\n",
-       "33.256671      744\n",
-       "33.261270      587\n",
-       "Name: count, Length: 586, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data['end_latitude'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "road_name\n",
-       "일반국도12호선    1046092\n",
-       "-            569463\n",
-       "일반국도16호선     554510\n",
-       "일반국도95호선     248181\n",
-       "일반국도11호선     215701\n",
-       "             ...   \n",
-       "애원로            7718\n",
-       "아봉로            7342\n",
-       "남조로            6813\n",
-       "호서중앙로          2819\n",
-       "호근로             587\n",
-       "Name: count, Length: 61, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data['road_name'].value_counts()"
+    "시작 지점과 도로 이름 간 연관성 분석을 위한 컬럼 추가"
    ]
   },
   {
@@ -216,160 +63,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ROAD_name\n",
-       "미수2교-일반국도12호선            26635\n",
-       "봉개교 시종점-번영로              24290\n",
-       "해안교--                    24182\n",
-       "영주교-일반국도11호선             23909\n",
-       "동홍교-일반국도16호선             23628\n",
-       "                         ...  \n",
-       "서귀포시 호근동 1838-4-호서중앙로      744\n",
-       "CU서귀호근로점-호서중앙로             744\n",
-       "식당-호근로                     587\n",
-       "영주교--                      472\n",
-       "오렌지농원--                    464\n",
-       "Name: count, Length: 561, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "train_data['ROAD_name'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_data = train_data.replace('-', np.NaN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id                       0\n",
-      "base_date                0\n",
-      "day_of_week              0\n",
-      "base_hour                0\n",
-      "lane_count               0\n",
-      "road_rating              0\n",
-      "road_name                0\n",
-      "multi_linked             0\n",
-      "connect_code             0\n",
-      "maximum_speed_limit      0\n",
-      "vehicle_restricted       0\n",
-      "weight_restricted        0\n",
-      "height_restricted        0\n",
-      "road_type                0\n",
-      "start_node_name          0\n",
-      "start_latitude           0\n",
-      "start_longitude          0\n",
-      "start_turn_restricted    0\n",
-      "end_node_name            0\n",
-      "end_latitude             0\n",
-      "end_longitude            0\n",
-      "end_turn_restricted      0\n",
-      "target                   0\n",
-      "ROAD_name                0\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check for missing values\n",
-    "missing_values_train_data = train_data.isnull().sum()\n",
-    "# Display the missing values\n",
-    "print(missing_values_train_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "start_longitude\n",
-       "126.567766    23291\n",
-       "126.736249    20775\n",
-       "126.456384    18137\n",
-       "126.556173    18084\n",
-       "126.505998    18076\n",
-       "              ...  \n",
-       "126.682267      881\n",
-       "126.677154      788\n",
-       "126.524410      744\n",
-       "126.524429      744\n",
-       "126.525745      587\n",
-       "Name: count, Length: 586, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data['start_longitude'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Series([], Name: count, dtype: int64)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data[train_data.road_name.isna()][\"start_latitude\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Series([], Name: count, dtype: int64)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data[train_data[\"start_latitude\"] == 33.472276].value_counts()"
+    "### 위도/경도(start_end_longitude)\n",
+    "\n",
+    "-시작위도 컬럼을 인코딩해서 새로운 컬럼으로 특성변환"
    ]
   },
   {
@@ -383,6 +82,26 @@
     "le=le.fit(train_data[\"start_latitude\"])\n",
     "train_data[\"start_latitude_enc\"]=le.transform(train_data[\"start_latitude\"])\n",
     "test_data[\"start_latitude_enc\"]=le.transform(test_data[\"start_latitude\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "le=le.fit(train_data[\"end_latitude\"])\n",
+    "train_data[\"end_latitude_enc\"]=le.transform(train_data[\"end_latitude\"])\n",
+    "test_data[\"end_latitude_enc\"]=le.transform(test_data[\"end_latitude\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "road_name \"-\"(결측값) 제거"
    ]
   },
   {
@@ -787,6 +506,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "road_name이 결측치로 된 값에서 weight_restricted가 43200인 곳이 '중문로', 32400인 곳이 '산서로' 이기 때문에 이들 값을 모두 대체"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -813,6 +539,36 @@
     "\n",
     "# .loc로 값 대체한 이후의 수 = 481943\n",
     "print(len(train[train[\"road_name\"] == \"-\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8만7천개의 \"-\" 값을 대체"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "추가적으로 \"-\" 값을 탐색하기 위해 조금 더 탐색하겠습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"-\" 값 대체를 위한 탐색\"\n",
+    "# 모든 값을 뽑으면 너무 길어지기에, 2개 값만을 출력합니다.\n",
+    "for i in train[\"start_node_name\"].unique():\n",
+    "    if (len(train[(train[\"start_node_name\"] == i)][\"road_name\"].value_counts()) != 2) :\n",
+    "        continue\n",
+    "    if \"-\" in train[(train[\"start_node_name\"] == i)][\"road_name\"].value_counts().index:\n",
+    "        print(\"----------------\", i, \"-------------------\")\n",
+    "        print(train[(train[\"start_node_name\"] == i)][\"road_name\"].value_counts())"
    ]
   },
   {
@@ -938,6 +694,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7번째 자리에서 반올림을 할 경우 train에서 고유값 개수 변동 x"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -958,11 +721,8 @@
     }
    ],
    "source": [
-    "# 소숫점 문제상 출력된 값을 그대로 사용한다면 값을 대체할 수 없는 문제가 있습니다.\n",
-    "# 이를 해결하기 위해서 소숫점의 자릿수를 제한하겠습니다.\n",
     "print(train[\"start_latitude\"].nunique(),train[\"start_longitude\"].nunique(), train[\"end_latitude\"].nunique(), train[\"end_longitude\"].nunique())\n",
     "\n",
-    "# 7번째자리에서 반올림 할 경우 train에서의 고윳값 갯수가 변하지 않습니다\n",
     "train[[\"start_latitude\", \"start_longitude\", \"end_latitude\", \"end_longitude\"]] = train[[\"start_latitude\", \"start_longitude\", \"end_latitude\", \"end_longitude\"]].apply(lambda x: round(x, 6))\n",
     "test[[\"start_latitude\", \"start_longitude\", \"end_latitude\", \"end_longitude\"]] = test[[\"start_latitude\", \"start_longitude\", \"end_latitude\", \"end_longitude\"]].apply(lambda x: round(x, 6))\n",
     "\n",
@@ -1169,6 +929,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 도로명(road_name)\n",
+    "- 도로명은 일반국도, 지방도, -로 구성되어 있음 -> 이들을 1,2,3으로 인코딩해서 분석\n",
+    "\n",
+    "->  ~로가 국도, 지방도에 비해 평균속도가 낮았다 : -로는 시내도로이기 때문인 것으로 예상"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1202,6 +972,21 @@
     "\n",
     "# 'A' 컬럼에 함수 적용\n",
     "test_data['rough_road_name'] = test_data['road_name'].apply(change_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 날짜(월(base_date), 계절(season), 요일(day_of_week))\n",
+    "\n",
+    "- 요일별은 거의 차이가 없음: 주말과 주중이 차이 없는것으로 보아, 평균속도가 관광객의 영향이 많이 받는 것으로 보임\n",
+    "\n",
+    "- 계절별로 월을 나누어 확인해 본 결과, 여름(6-8월)이 가장 평균 속도가 낮음, 나머진 비슷\n",
+    "\n",
+    "- 월별로 확인해 본 결과, 성수기인 7월이 가장 평균 속도가 낮았다.(7월: 35 < 나머지: 42): 계절보다는 성수기/비성수기가 더 결정요인이 큰것같음\n",
+    "\n",
+    "+) 데이터가 21.9 - 22.7의 데이터기 때문에, 8월 데이터는 확인할 수 없었음+) 테스트 데이터가 22.8월 데이터임.. <- 아마도 성수기로 봐야할 것 같음"
    ]
   },
   {
@@ -1249,6 +1034,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 월별 데이터 분석"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -1274,6 +1066,15 @@
     "\n",
     "# 'A' 컬럼에 함수 적용\n",
     "test_data['month'] = test_data['base_date'].apply(change_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성수기/비성수기\n",
+    "- 7/8월 : 성수기 \n",
+    "- else : 비성수기"
    ]
   },
   {
@@ -1304,6 +1105,15 @@
     "    else:\n",
     "        return False\n",
     "test_data['peak_season'] = test_data['base_date'].apply(change_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 시간(base_hour)\n",
+    "\n",
+    "- 10~15시가 새벽~밤 대비 평균적으로 낮은 속도를 보였고, 특히 18시에 제일 낮은 평균속도를 보임: 18시는 관광객 + 퇴근 인구 때문에 가장 낮은 평균속도를 보였을 것으로 예상: 출근시간은 크게 막히지 않는 모습을 보임: 평균속도를 결정하는 것은 주민 < 관광객"
    ]
   },
   {
@@ -1340,7 +1150,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#호선"
+    "### 호선\n",
+    "- 일반국도/지방도는 호선마다 평균 속도가 다름: 일반국도) 11(39.99)<99<12<16<95(70.44) 순으로 차이남\n",
+    "\n",
+    "  지방도) 1120 이 가장 낮음(36)"
    ]
   },
   {
@@ -1354,76 +1167,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'base_date', 'day_of_week', 'base_hour', 'lane_count',\n",
-       "       'road_rating', 'road_name', 'multi_linked', 'connect_code',\n",
-       "       'maximum_speed_limit', 'vehicle_restricted', 'weight_restricted',\n",
-       "       'height_restricted', 'road_type', 'start_node_name', 'start_latitude',\n",
-       "       'start_longitude', 'start_turn_restricted', 'end_node_name',\n",
-       "       'end_latitude', 'end_longitude', 'end_turn_restricted', 'target',\n",
-       "       'ROAD_name', 'start_latitude_enc', 'rough_road_name', 'season', 'month',\n",
-       "       'peak_season', 'peak_hour', 'line_number'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "train_data.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "end_latitude\n",
-       "33.248633    23126\n",
-       "33.435941    20791\n",
-       "33.465863    18168\n",
-       "33.500330    18126\n",
-       "33.507349    18083\n",
-       "             ...  \n",
-       "33.491567      881\n",
-       "33.468664      788\n",
-       "33.254153      744\n",
-       "33.256671      744\n",
-       "33.261270      587\n",
-       "Name: count, Length: 586, dtype: int64"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data[\"end_latitude\"].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "le = LabelEncoder()\n",
-    "le=le.fit(train_data[\"end_latitude\"])\n",
-    "train_data[\"end_latitude_enc\"]=le.transform(train_data[\"end_latitude\"])\n",
-    "test_data[\"end_latitude_enc\"]=le.transform(test_data[\"end_latitude\"])"
+    "- 통과 제한하중"
    ]
   },
   {
